--- a/dataAnalysis.ipynb
+++ b/dataAnalysis.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "markdown",
    "id": "b36e1e21-e38a-4385-91c7-942458decbc1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "# 国土交通省の不動産価格情報を使った簡単なデータ分析\n",
     "## 参考ページ\n",
@@ -26,17 +31,17 @@
    "id": "3e5b286a-d6fe-48a9-b298-e16bf2c662ad",
    "metadata": {},
    "source": [
-    "## 文字化け対策  \n",
-    "ターミナルでpip install -U japanize_matplotlibした後に実行"
+    "## 文字化け対策  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "09fff1dd-f452-4797-9036-7b4f305dd9b5",
+   "execution_count": null,
+   "id": "bf209071-099c-4baa-845c-1e065949f5f4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "pip install -U japanize_matplotlib\n",
     "import japanize_matplotlib"
    ]
   },
@@ -81,266 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8605a7f4-11a7-4c93-913f-023dec72a49a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>No</th>\n",
-       "      <th>種類</th>\n",
-       "      <th>地域</th>\n",
-       "      <th>市区町村コード</th>\n",
-       "      <th>都道府県名</th>\n",
-       "      <th>市区町村名</th>\n",
-       "      <th>地区名</th>\n",
-       "      <th>最寄駅：名称</th>\n",
-       "      <th>最寄駅：距離（分）</th>\n",
-       "      <th>取引価格（総額）</th>\n",
-       "      <th>坪単価</th>\n",
-       "      <th>間取り</th>\n",
-       "      <th>面積（㎡）</th>\n",
-       "      <th>取引価格（㎡単価）</th>\n",
-       "      <th>土地の形状</th>\n",
-       "      <th>間口</th>\n",
-       "      <th>延床面積（㎡）</th>\n",
-       "      <th>建築年</th>\n",
-       "      <th>建物の構造</th>\n",
-       "      <th>用途</th>\n",
-       "      <th>今後の利用目的</th>\n",
-       "      <th>前面道路：方位</th>\n",
-       "      <th>前面道路：種類</th>\n",
-       "      <th>前面道路：幅員（ｍ）</th>\n",
-       "      <th>都市計画</th>\n",
-       "      <th>建ぺい率（％）</th>\n",
-       "      <th>容積率（％）</th>\n",
-       "      <th>取引時点</th>\n",
-       "      <th>改装</th>\n",
-       "      <th>取引の事情等</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>中古マンション等</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13105</td>\n",
-       "      <td>東京都</td>\n",
-       "      <td>文京区</td>\n",
-       "      <td>大塚</td>\n",
-       "      <td>護国寺</td>\n",
-       "      <td>3</td>\n",
-       "      <td>24000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>１Ｋ</td>\n",
-       "      <td>20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>平成12年</td>\n",
-       "      <td>ＲＣ</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>商業地域</td>\n",
-       "      <td>80</td>\n",
-       "      <td>400</td>\n",
-       "      <td>2021年第１四半期</td>\n",
-       "      <td>改装済</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>中古マンション等</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13105</td>\n",
-       "      <td>東京都</td>\n",
-       "      <td>文京区</td>\n",
-       "      <td>大塚</td>\n",
-       "      <td>護国寺</td>\n",
-       "      <td>4</td>\n",
-       "      <td>15000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>１Ｋ</td>\n",
-       "      <td>20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>平成10年</td>\n",
-       "      <td>ＳＲＣ</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>商業地域</td>\n",
-       "      <td>80</td>\n",
-       "      <td>500</td>\n",
-       "      <td>2021年第１四半期</td>\n",
-       "      <td>未改装</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>中古マンション等</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13105</td>\n",
-       "      <td>東京都</td>\n",
-       "      <td>文京区</td>\n",
-       "      <td>大塚</td>\n",
-       "      <td>護国寺</td>\n",
-       "      <td>4</td>\n",
-       "      <td>70000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>平成20年</td>\n",
-       "      <td>ＲＣ</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>商業地域</td>\n",
-       "      <td>80</td>\n",
-       "      <td>400</td>\n",
-       "      <td>2021年第１四半期</td>\n",
-       "      <td>未改装</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>宅地(土地と建物)</td>\n",
-       "      <td>住宅地</td>\n",
-       "      <td>13105</td>\n",
-       "      <td>東京都</td>\n",
-       "      <td>文京区</td>\n",
-       "      <td>大塚</td>\n",
-       "      <td>新大塚</td>\n",
-       "      <td>3</td>\n",
-       "      <td>66000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>55</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ほぼ長方形</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>令和2年</td>\n",
-       "      <td>木造</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>北</td>\n",
-       "      <td>私道</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>準工業地域</td>\n",
-       "      <td>60</td>\n",
-       "      <td>300</td>\n",
-       "      <td>2021年第１四半期</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>宅地(土地)</td>\n",
-       "      <td>商業地</td>\n",
-       "      <td>13105</td>\n",
-       "      <td>東京都</td>\n",
-       "      <td>文京区</td>\n",
-       "      <td>大塚</td>\n",
-       "      <td>新大塚</td>\n",
-       "      <td>4</td>\n",
-       "      <td>70000000</td>\n",
-       "      <td>3700000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1100000.0</td>\n",
-       "      <td>ほぼ長方形</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>住宅</td>\n",
-       "      <td>西</td>\n",
-       "      <td>区道</td>\n",
-       "      <td>10.6</td>\n",
-       "      <td>準工業地域</td>\n",
-       "      <td>60</td>\n",
-       "      <td>300</td>\n",
-       "      <td>2021年第１四半期</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   No         種類   地域  市区町村コード 都道府県名 市区町村名 地区名 最寄駅：名称  最寄駅：距離（分）  取引価格（総額）  \\\n",
-       "0   1   中古マンション等  NaN    13105   東京都   文京区  大塚    護国寺          3  24000000   \n",
-       "1   2   中古マンション等  NaN    13105   東京都   文京区  大塚    護国寺          4  15000000   \n",
-       "2   3   中古マンション等  NaN    13105   東京都   文京区  大塚    護国寺          4  70000000   \n",
-       "3   4  宅地(土地と建物)  住宅地    13105   東京都   文京区  大塚    新大塚          3  66000000   \n",
-       "4   5     宅地(土地)  商業地    13105   東京都   文京区  大塚    新大塚          4  70000000   \n",
-       "\n",
-       "         坪単価  間取り  面積（㎡）  取引価格（㎡単価）  土地の形状   間口  延床面積（㎡）    建築年 建物の構造   用途  \\\n",
-       "0        NaN   １Ｋ     20        NaN    NaN  NaN      NaN  平成12年    ＲＣ   住宅   \n",
-       "1        NaN   １Ｋ     20        NaN    NaN  NaN      NaN  平成10年   ＳＲＣ   住宅   \n",
-       "2        NaN  NaN     65        NaN    NaN  NaN      NaN  平成20年    ＲＣ   住宅   \n",
-       "3        NaN  NaN     55        NaN  ほぼ長方形  4.7     95.0   令和2年    木造   住宅   \n",
-       "4  3700000.0  NaN     65  1100000.0  ほぼ長方形  5.0      NaN    NaN   NaN  NaN   \n",
-       "\n",
-       "  今後の利用目的 前面道路：方位 前面道路：種類  前面道路：幅員（ｍ）   都市計画  建ぺい率（％）  容積率（％）        取引時点  \\\n",
-       "0      住宅     NaN     NaN         NaN   商業地域       80     400  2021年第１四半期   \n",
-       "1      住宅     NaN     NaN         NaN   商業地域       80     500  2021年第１四半期   \n",
-       "2      住宅     NaN     NaN         NaN   商業地域       80     400  2021年第１四半期   \n",
-       "3      住宅       北      私道         3.3  準工業地域       60     300  2021年第１四半期   \n",
-       "4      住宅       西      区道        10.6  準工業地域       60     300  2021年第１四半期   \n",
-       "\n",
-       "    改装 取引の事情等  \n",
-       "0  改装済    NaN  \n",
-       "1  未改装    NaN  \n",
-       "2  未改装    NaN  \n",
-       "3  NaN    NaN  \n",
-       "4  NaN    NaN  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_67/391538080.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_option\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'display.max_columns'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'13105_20211_20211.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'CP932'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
     }
    ],
    "source": [
